deploy/applications/iris/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris
  namespace: iris
  labels:
    app.kubernetes.io/name: iris
    app.kubernetes.io/part-of: iris
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: iris
  ports:
    - name: http
      port: 8080
      targetPort: http
