deploy/applications/iris/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: iris
  namespace: iris
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.iris.calebache.com`)
      kind: Rule
      services:
        - name: iris
          port: 8080
  tls:
    secretName: iris-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: iris-http-redirect
  namespace: iris
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app.iris.calebache.com`)
      kind: Rule
      middlewares:
        - name: iris-redirect-https
      services:
        - name: iris
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: iris-redirect-https
  namespace: iris
spec:
  redirectScheme:
    scheme: https
    permanent: true
